WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222817
[LFC][IFC] Replaced and non-replaced inline level box should not be called inline boxes.
https://bugs.webkit.org/show_bug.cgi?id=222817
Summary
[LFC][IFC] Replaced and non-replaced inline level box should not be called in...
alan
Reported
2021-03-05 12:53:50 PST
they are not inline boxes.
Attachments
Patch
(4.54 KB, patch)
2021-03-05 12:55 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-03-05 12:55:40 PST
Created
attachment 422399
[details]
Patch
EWS
Comment 2
2021-03-05 19:14:23 PST
Committed
r274028
: <
https://commits.webkit.org/r274028
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 422399
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-03-05 19:15:15 PST
<
rdar://problem/75123493
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug