[LFC][IFC] Replaced and non-replaced inline level box should not be called inline boxes. https://bugs.webkit.org/show_bug.cgi?id=222817

Reviewed by Darin Adler.

Not every inline level box is an inline box (but every inline box is an inline level box).

* layout/inlineformatting/InlineLine.cpp:
(WebCore::Layout::Line::append):
(WebCore::Layout::Line::appendNonReplacedInlineLevelBox):
(WebCore::Layout::Line::appendReplacedInlineLevelBox):
(WebCore::Layout::Line::appendNonReplacedInlineBox): Deleted.
(WebCore::Layout::Line::appendReplacedInlineBox): Deleted.
* layout/inlineformatting/InlineLine.h:


Canonical link: https://commits.webkit.org/234964@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274028 268f45cc-cd09-0410-ab3c-d52691b4dbfc